fixed size and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@
 h2 {
   text-align: center;
   font-family: "Work Sans", "Helvetica", "sans-serif";
-  font-size: 1rem;
+  font-size: 1.5rem;
+  /*padding-bottom: 3rem;*/
 }
 
 h1 {
